--- a/assignment1/softmax.ipynb
+++ b/assignment1/softmax.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,9 +44,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train data shape:  (49000, 3073)\n",
+      "Train labels shape:  (49000,)\n",
+      "Validation data shape:  (1000, 3073)\n",
+      "Validation labels shape:  (1000,)\n",
+      "Test data shape:  (1000, 3073)\n",
+      "Test labels shape:  (1000,)\n",
+      "dev data shape:  (500, 3073)\n",
+      "dev labels shape:  (500,)\n"
+     ]
+    }
+   ],
    "source": [
     "def get_CIFAR10_data(num_training=49000, num_validation=1000, num_test=1000, num_dev=500):\n",
     "    \"\"\"\n",
@@ -116,6 +131,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(500,)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_dev[list(range(len(X_dev))),y_dev].shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -126,9 +161,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 91,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 2.363000\n",
+      "sanity check: 2.302585\n",
+      "[[-2.47503943e+00  1.30869021e+00 -1.29999142e-01 ... -1.50614775e+00\n",
+      "  -1.12758016e+00 -4.19101257e+00]\n",
+      " [-4.11848223e+00  1.30581002e+00 -6.29715083e-01 ... -1.64182467e+00\n",
+      "  -2.34189774e+00 -5.04197080e+00]\n",
+      " [-5.69630594e+00  1.38211137e+00  5.99789493e-01 ... -1.06136700e+00\n",
+      "  -3.59147132e+00 -5.51757565e+00]\n",
+      " ...\n",
+      " [-2.58317805e+00  3.03060405e-03  2.24619665e-01 ... -1.03420858e+00\n",
+      "   3.04923926e+00  7.10687094e-01]\n",
+      " [-5.08831637e+00 -1.19070951e+00 -7.97098371e-01 ... -5.12700942e-01\n",
+      "   1.76897344e-01 -8.79504371e-01]\n",
+      " [ 4.16593815e-01  4.32593815e-01  4.58593815e-01 ...  4.52593815e-01\n",
+      "   4.48593815e-01  4.44593815e-01]]\n"
+     ]
+    }
+   ],
    "source": [
     "# First implement the naive softmax loss function with nested loops.\n",
     "# Open the file cs231n/classifiers/softmax.py and implement the\n",
@@ -143,8 +202,61 @@
     "\n",
     "# As a rough sanity check, our loss should be something close to -log(0.1).\n",
     "print('loss: %f' % loss)\n",
-    "print('sanity check: %f' % (-np.log(0.1)))"
+    "print('sanity check: %f' % (-np.log(0.1)))\n",
+    "print(grad)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 2.360085\n",
+      "sanity check: 2.302585\n",
+      "[[-2.14690183  1.79543848 -0.55040554 ...  1.29652596 -0.73326812\n",
+      "  -5.95298851]\n",
+      " [-3.70331536  2.26548035 -0.84063266 ...  1.67251714 -1.88866202\n",
+      "  -6.87870775]\n",
+      " [-6.16455951  1.89647065 -0.34765903 ...  1.94690952 -3.9977419\n",
+      "  -8.56603514]\n",
+      " ...\n",
+      " [-2.44185658 -0.15790353 -0.4213633  ... -0.51249182  3.4938978\n",
+      "  -0.40342796]\n",
+      " [-4.10338111 -0.15957288 -0.43380449 ...  1.16376045  1.53757407\n",
+      "  -1.32322729]\n",
+      " [-0.0231717  -0.00948732  0.01876936 ...  0.02380285  0.00897791\n",
+      "   0.01205392]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# First implement the naive softmax loss function with nested loops.\n",
+    "# Open the file cs231n/classifiers/softmax.py and implement the\n",
+    "# softmax_loss_naive function.\n",
+    "\n",
+    "from cs231n.classifiers.softmax import softmax_loss_vectorized\n",
+    "import time\n",
+    "\n",
+    "# Generate a random softmax weight matrix and use it to compute the loss.\n",
+    "W = np.random.randn(3073, 10) * 0.0001\n",
+    "loss, grad = softmax_loss_vectorized(W, X_dev, y_dev, 0.0)\n",
+    "\n",
+    "# As a rough sanity check, our loss should be something close to -log(0.1).\n",
+    "print('loss: %f' % loss)\n",
+    "print('sanity check: %f' % (-np.log(0.1)))\n",
+    "print(grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -158,9 +270,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numerical: 0.325804 analytic: 1.193696, relative error: 5.711691e-01\n",
+      "numerical: 0.744340 analytic: 1.379981, relative error: 2.992206e-01\n",
+      "numerical: 1.391095 analytic: -0.589075, relative error: 1.000000e+00\n",
+      "numerical: -4.565377 analytic: -5.053858, relative error: 5.078165e-02\n",
+      "numerical: 1.891605 analytic: 2.741627, relative error: 1.834621e-01\n",
+      "numerical: 1.615320 analytic: 2.886662, relative error: 2.823960e-01\n",
+      "numerical: -3.798446 analytic: -3.755098, relative error: 5.738765e-03\n",
+      "numerical: 4.453873 analytic: 3.913873, relative error: 6.453349e-02\n",
+      "numerical: 0.726350 analytic: 0.534344, relative error: 1.523020e-01\n",
+      "numerical: -1.513493 analytic: -0.841907, relative error: 2.851261e-01\n",
+      "numerical: -4.527575 analytic: -4.383239, relative error: 1.619791e-02\n",
+      "numerical: -3.716309 analytic: -4.046788, relative error: 4.257052e-02\n",
+      "numerical: -0.011825 analytic: -1.761682, relative error: 9.866651e-01\n",
+      "numerical: -0.546357 analytic: 0.874642, relative error: 1.000000e+00\n",
+      "numerical: 2.759657 analytic: 0.515921, relative error: 6.849893e-01\n",
+      "numerical: -1.474981 analytic: -1.218706, relative error: 9.513918e-02\n",
+      "numerical: 0.733939 analytic: 0.971999, relative error: 1.395479e-01\n",
+      "numerical: -0.420659 analytic: -0.642482, relative error: 2.086481e-01\n",
+      "numerical: -0.153689 analytic: -0.517696, relative error: 5.421740e-01\n",
+      "numerical: -2.425910 analytic: -4.198320, relative error: 2.675647e-01\n"
+     ]
+    }
+   ],
    "source": [
     "# Complete the implementation of softmax_loss_naive and implement a (naive)\n",
     "# version of the gradient that uses nested loops.\n",
@@ -295,9 +434,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -309,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
